# python.pi

./: README.md  Topics.txt
Test/: Note.txt  test_sample.py
Test24_Command/: app.py  setup.py
Test24_Command/Test24/: __main__.py  cli.py
UnitTest/: Note.txt  test_sample.py
gui/: index.py
pytest/src/01_marks/02_parametrize/: test_parametrize_0.py
test_pip/: CHANGELOG.txt  LICENSE.txt  MANIFEST.in  Note.txt  README.md  pyproject.toml  setup.py  test.py
test_pip/src/test1014/: __init__.py  main.py
