[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test1014"
version = "0.0.4"
authors = [
  { name="ahmadsharif", email="theahmadsharif@gmail.com" },
]
license = { text = "MIT" }
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/theahmadsharif"
